--- a/front-end/src/components/category/index.scss
+++ b/front-end/src/components/category/index.scss
@@ -4,8 +4,12 @@
     z-index: 2;
 }
 
-.select {
+.mySelect {
     z-index: 1;
     position: sticky;
     top: 0px;
+}
+
+.ant-select {
+    border: 1px solid;
 }
