U42-53 makes ingredient detail page looks better

--- a/front-end/src/components/recipe/index.scss
+++ b/front-end/src/components/recipe/index.scss
@@ -10,3 +10,18 @@
 .ingredients_quantity {
   text-align: right;
 }
+.detail-page-container {
+  padding: 10px;
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .content {
+    .line {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+    }
+  }
+}
